--- a/style.css
+++ b/style.css
@@ -47,3 +47,24 @@ p {
 .wrapper button:nth-of-type(3) {
     margin-left: 300px;
 }
+
+@media screen and (max-width: 1269px){
+    .wrapper button:nth-of-type(2),
+    .wrapper button:nth-of-type(3) {
+    margin-left: 200px;
+}
+}
+
+@media screen and (max-width: 999px){
+    .wrapper button:nth-of-type(2),
+    .wrapper button:nth-of-type(3) {
+    margin-left: 100px;
+}
+}
+
+@media screen and (max-width: 560px){
+    .wrapper button:nth-of-type(2),
+    .wrapper button:nth-of-type(3) {
+    margin-left: 25px;
+}
+}
